# scipio

./: .pip-lic-ignore  .pylintrc  Cargo.toml  LICENSE  Makefile  README.md  README.rst  environment.yml  requirements.txt  setup.py
.github/workflows/: main.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
docs/source/development/: getting_started.rst
scipio/: __init__.py  aws.py  aws_ec2.py  aws_iam.py  cli.py  version.py
src/: main.rs
tests/: test_aws.py  test_cli.py  test_example.py  test_iam.py
