[package]
name = "scipio"
version = "0.1.0"
edition = "2021"
authors = ["Richard Julian <richard@rjulian.net>"]
description = "AWS reconnaissance tool. Pronounced skip-ee-oh."
readme = "README.md"
homepage = "https://github.com/rjulian/scipio"
repository = "https://github.com/rjulian/scipio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
